Bug 153640 - Not possible to change area color back to None from sidebar
Summary: Not possible to change area color back to None from sidebar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.6.0 target:7.4.7 target:7.5.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-02-15 14:43 UTC by Xisco Faulí
Modified: 2023-02-23 10:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-02-15 14:43:00 UTC
Steps to reproduce:
1. Open writer
2. Insert a chart
3. Select the chart
4. In the sidebar, go to Area and change Fill to Color -> The chart has a blue background
5. In the sidebar, change Fill to None

-> Nothing happens

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bfbbdab13f16adf66f1afb9e2a2a103162927ba3
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-02-15 14:43:45 UTC
Regression introduced by:

author	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2022-06-22 17:34:00 +0200
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2022-06-23 10:02:57 +0200
commit 5491a82854e3e6dd2dbb4b0012cb4bbeb4ee22e0 (patch)
tree 5d07d6ee704cdc92fe20cfba5d150459ae5af9e4
parent 26fbf6eef19e2746c28d2f1584505d5e10a295cc (diff)
tdf#128150 Disable UseSlideBackground item when setting style back to None

Bisected with: bibisect-linux64-7.5

Adding Cc: to Samuel Mehrbrodt
Comment 2 Xisco Faulí 2023-02-15 14:44:03 UTC
@Samuel, what's the purpose of 5491a82854e3e6dd2dbb4b0012cb4bbeb4ee22e0 ?
Comment 3 Gabor Kelemen (Collabora) 2023-02-16 13:15:23 UTC
bug 150650 stemmed from the same commit
Comment 4 Samuel Mehrbrodt 2023-02-20 14:40:09 UTC
(In reply to Xisco Faulí from comment #2)
> @Samuel, what's the purpose of 5491a82854e3e6dd2dbb4b0012cb4bbeb4ee22e0 ?

When the fill style was "use background", and then is switched to none, the FillStyleUseBackground thing must be reset.
Comment 5 Commit Notification 2023-02-23 07:04:48 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a2732de4bd080e3ed8894ba3618f48bc4c6d9abe

tdf#153640 Fix changing chart background color back to None

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-02-23 10:06:02 UTC
Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 988cdcc18610300dd389e0efc25553e6c1bcb19e
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Samuel, thanks for fixing this issue!!
Comment 7 Commit Notification 2023-02-23 10:07:13 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/0239c7746ded2a91dab2e2815bb1ff68bf203fca

tdf#153640 Fix changing chart background color back to None

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-02-23 10:07:19 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/7530ac2ee376d9778b974dd4065df18d4361e886

tdf#153640 Fix changing chart background color back to None

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.