tdf#153640 Fix changing chart background color back to None

Change-Id: I653028d6016ca0caa72cb2a877cd23592c322a18
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147351
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>